LayoutTests:

Reviewed by Maciej.

        Test for REGRESSION: Google Calendar cell highlight misplaced
        http://bugs.webkit.org/show_bug.cgi?id=12687

        * fast/block/positioning/offsetLeft-offsetTop-borders-expected.checksum: Added.
        * fast/block/positioning/offsetLeft-offsetTop-borders-expected.png: Added.
        * fast/block/positioning/offsetLeft-offsetTop-borders-expected.txt: Added.
        * fast/block/positioning/offsetLeft-offsetTop-borders.html: Added.

WebCore:

        Reviewed by Maciej.

        REGRESSION: Google Calendar cell highlight misplaced
        http://bugs.webkit.org/show_bug.cgi?id=12687

        Make offsetLeft/offsetTop/offsetParent behavior match Firefox.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::offsetLeft):
        (WebCore::RenderObject::offsetTop):
        (WebCore::RenderObject::offsetParent):



Canonical link: https://commits.webkit.org/16453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19567 268f45cc-cd09-0410-ab3c-d52691b4dbfc